added logo and made responsive ish

--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
         </div>
         <div class="blob"></div>
     </div>
+
+    <div class="logo">
+        <svg width="204" height="150" viewBox="0 0 204 150" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_544_2)">
+            <path d="M87.4534 0L174.056 150H203.706L117.103 0H87.4534Z" fill="white"/>
+            <path d="M116.252 0L29.6492 150H0L86.6023 0H116.252Z" fill="white"/>
+            <path d="M101.852 54.9375L87.0269 80.6148L127.08 149.988H156.729L101.852 54.9375Z" fill="white"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_544_2">
+            <rect width="203.706" height="150" fill="white"/>
+            </clipPath>
+            </defs>
+            </svg>
+    </div>
+
     <script src="./app.js"></script>
 </body>
 </html>
