--- a/index.html
+++ b/index.html
@@ -20,15 +20,32 @@
     <div class="container">
         <div class="offerings" id="offerings">
             <h3>Open Source Intelligence</h3>
+            <ul class="selling_points">
+                <li>- We uncover sensitive information on the target of your choice</li>
+                <li>- Family members, friends, and colleagues information is included</li>
+                <li>- Painfully detailed, intuitive reports provided to every client</li>
+            </ul>
+            <div>
+                <a class="small_cta" href="">Sample Report</a>
+                <a class="small_cta" href="">Get In Touch</a>
+            </div>
             <h3>Data Sovereignty</h3>
-            <h3>Penetration Testing</h3>
+            <ul class="selling_points">
+                <li>- Using the OSINT report, we remove dangerous and sensitive information</li>
+                <li>- We correct, alter, and publish data to fit your desires</li>
+                <li>- Ongoing reporting tracks all progress in real time</li>
+            </ul>
+            <div>
+                <a class="small_cta" href="">Sample Report</a>
+                <a class="small_cta" href="">Get In Touch</a>
+            </div>
         </div>
         <div class="blob right-side"></div>
     </div>
 
     <div class="container">
         <div class="cta" id="cta">
-            <a class="cta-button" href="#">Get In Touch</a>
+            <a class="cta-button" href="mailto:g@griffinadelmann.com">Get In Touch</a>
         </div>
         <div class="blob"></div>
     </div>
