--- a/index.html
+++ b/index.html
@@ -21,23 +21,26 @@
         <div class="offerings" id="offerings">
             <h3>Open Source Intelligence</h3>
             <ul class="selling_points">
-                <li>- We uncover sensitive information on the target of your choice</li>
-                <li>- Family members, friends, and colleagues information is included</li>
-                <li>- Painfully detailed, intuitive reports provided to every client</li>
+                <li>We uncover sensitive information on the target of your choice</li>
+                <li>Family members, friends, and colleagues information is included</li>
+                <li>Painfully detailed, intuitive reports provided to every client</li>
             </ul>
-            <div>
-                <a class="small_cta" href="">Sample Report</a>
-                <a class="small_cta" href="">Get In Touch</a>
+            <div class="cta_container">
+                <a class="small_cta" href="#">Sample Report</a>
+                <a class="small_cta" href="mailto:g@griffinadelmann.com">Get In Touch</a>
             </div>
+            <br>
+            <br>
+            <br>
             <h3>Data Sovereignty</h3>
             <ul class="selling_points">
-                <li>- Using the OSINT report, we remove dangerous and sensitive information</li>
-                <li>- We correct, alter, and publish data to fit your desires</li>
-                <li>- Ongoing reporting tracks all progress in real time</li>
+                <li>Using the OSINT report, we remove dangerous and sensitive information</li>
+                <li>We correct, alter, and publish data to fit your desires</li>
+                <li>Ongoing reporting tracks all progress in real time</li>
             </ul>
-            <div>
-                <a class="small_cta" href="">Sample Report</a>
-                <a class="small_cta" href="">Get In Touch</a>
+            <div class="cta_container">
+                <a class="small_cta" href="#">Sample Report</a>
+                <a class="small_cta" href="mailto:g@griffinadelmann.com">Get In Touch</a>
             </div>
         </div>
         <div class="blob right-side"></div>
