--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="container">
         <div class="offerings" id="offerings">
             <h3>Open Source Intelligence</h3>
+            <h4>Uncover what’s out there. Protect your privacy. Take control of your digital footprint</h4>
             <p>
-                We uncover sensitive information on the target of your choice.<br>
-                Family members, friends, and colleagues information is included.<br>
-                Painfully detailed, intuitive reports provided to every client.
+                In today’s digital world, more information about you exists online than you may realize. Open Source Intelligence (OSINT) helps uncover what data is available, who can access it, and how it could be used against you. Our service provides a comprehensive analysis of your digital footprint or investigates third-party individuals for intelligence purposes.
+
             </p>
 
             <div class="">
@@ -36,6 +36,7 @@
             <br>
             <br>
             <h3>Data Sovereignty</h3>
+            <h4>Regain Control Over Your Digital Presence</h4>
             <p>
                 Using the OSINT report, we remove dangerous and sensitive information.<br>
                 We correct, alter, and publish data to fit your desires.<br>
