--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Adelmann Cybersecurity</title>
 </head>
 <body>
-    <a id="down-caret" class="down-caret"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="Arrow / Caret_Down_MD"> <path id="Vector" d="M16 10L12 14L8 10" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g> </g></svg></a>
     <div class="container">
         <div class="hero" id="hero">
             <h1 class="title">Adelmann Cybersecurity</h1>
@@ -30,7 +29,7 @@
 
             <div class="">
                 <a class="small_cta" href="#">Sample Report</a>
-                <a class="small_cta" href="mailto:g@griffinadelmann.com">Get In Touch</a>
+                <a class="small_cta" href="#contact">Get In Touch</a>
             </div>
             <br>
             <br>
@@ -67,7 +66,7 @@
 
             <div style="margin-top: 40px;">
                 <a class="small_cta" href="#">Sample Report</a>
-                <a class="small_cta" href="mailto:g@griffinadelmann.com">Get In Touch</a>
+                <a class="small_cta" href="#contact">Get In Touch</a>
             </div>
 
             <div class="blob right-side"></div>
@@ -87,14 +86,22 @@
            
             <div class="">
                 <a class="small_cta" href="#">Sample Report</a>
-                <a class="small_cta" href="mailto:g@griffinadelmann.com">Get In Touch</a>
+                <a class="small_cta" href="#contact">Get In Touch</a>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <div class="cta" id="cta">
-            <a class="cta-button" href="mailto:g@griffinadelmann.com">Get In Touch</a>
+    <div class="container" id="contact">
+        <div class="contact-section">
+            <div class="email flex">
+                <svg style="margin-right: 40px; padding: 4px;" width="30px" height="30px" viewBox="0 -2.5 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>email [#ffffff]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-340.000000, -922.000000)" fill="#ffffff"> <g id="icons" transform="translate(56.000000, 160.000000)"> <path d="M294,774.474 L284,765.649 L284,777 L304,777 L304,765.649 L294,774.474 Z M294.001,771.812 L284,762.981 L284,762 L304,762 L304,762.981 L294.001,771.812 Z" id="email-[#ffffff]"> </path> </g> </g> </g> </g></svg>
+                <h2 id="copyEmail">contact[at]griffinadelmann.com</h2>
+            </div>
+            <br>
+            <div class="phone flex">
+                <svg style="margin-right: 40px;" width="30px" height="30px" fill="#ffffff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M11.748 5.773S11.418 5 10.914 5c-.496 0-.754.229-.926.387S6.938 7.91 6.938 7.91s-.837.731-.773 2.106c.054 1.375.323 3.332 1.719 6.058 1.386 2.72 4.855 6.876 7.047 8.337 0 0 2.031 1.558 3.921 2.191.549.173 1.647.398 1.903.398.26 0 .719 0 1.246-.385.536-.389 3.543-2.807 3.543-2.807s.736-.665-.119-1.438c-.859-.773-3.467-2.492-4.025-2.944-.559-.459-1.355-.257-1.699.054-.343.313-.956.828-1.031.893-.112.086-.419.365-.763.226-.438-.173-2.234-1.148-3.899-3.426-1.655-2.276-1.837-3.02-2.084-3.824a.56.56 0 0 1 .225-.657c.248-.172 1.161-.933 1.161-.933s.591-.583.344-1.27-1.906-4.716-1.906-4.716z"></path></g></svg>
+                <h2 id="copyPhone">(646) 883-5096</h2>
+            </div>
         </div>
         <div class="blob"></div>
     </div>
