--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <div class="container hero">
         <div id="hero">
             <h1 class="title">Adelmann Cybersecurity</h1>
-            <p class="subtitle"><i>Human solutions to digital threats</i></p>
+            <i class="subtitle" style="line-height: auto;">Human solutions to digital threats</i>
         </div>
     </div>
 
     <div class="container" id="threats" style="margin-bottom: 100px;">
         <div class="inner">
-            <h2 style="padding-left: 20px;">Your Digital Exposure is Your Greatest Liability</h2>
+            <h2 style="padding-left: 20px;">Digital Exposure is Your Greatest Liability</h2>
             <p style="padding: 20px; font-size: 16px;">Your personal and professional details exist online. Data
                 brokers, public records,
                 social media, and news
@@ -57,7 +57,7 @@
 
     <div class="container" id="about-us" style="margin-bottom: 100px;">
         <div class="inner">
-            <h2 style="padding-left: 20px;">Your Partner in Digital Sovereignty</h2>
+            <h2 style="padding-left: 20px;">Your Partner in Data Sovereignty</h2>
             <p style="padding: 20px; font-size: 16px;">Adelmann Cybersecurity specializes in digital footprint reduction
                 and OSINT countermeasures for high-profile
                 individuals and families. Our expertise lies in uncovering and neutralizing intelligence-based threats
@@ -68,61 +68,24 @@
     </div>
 
     <div class="container" id="contact" style="margin-bottom: 100px;">
-        <div class="contact-section">
-            <div class="email flex">
-                <svg style="margin-right: 40px; padding: 4px;" width="30px" height="30px" viewBox="0 -2.5 20 20"
-                    version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                    fill="#000000">
-                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                    <g id="SVGRepo_iconCarrier">
-                        <title>email [#ffffff]</title>
-                        <desc>Created with Sketch.</desc>
-                        <defs> </defs>
-                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                            <g id="Dribbble-Light-Preview" transform="translate(-340.000000, -922.000000)"
-                                fill="#ffffff">
-                                <g id="icons" transform="translate(56.000000, 160.000000)">
-                                    <path
-                                        d="M294,774.474 L284,765.649 L284,777 L304,777 L304,765.649 L294,774.474 Z M294.001,771.812 L284,762.981 L284,762 L304,762 L304,762.981 L294.001,771.812 Z"
-                                        id="email-[#ffffff]"> </path>
-                                </g>
-                            </g>
-                        </g>
-                    </g>
-                </svg>
-                <h2 id="copyEmail">contact[at]griffinadelmann.com</h2>
-            </div>
-            <br>
-            <div class="phone flex">
-                <svg style="margin-right: 40px;" width="30px" height="30px" fill="#ffffff" viewBox="0 0 32 32"
-                    xmlns="http://www.w3.org/2000/svg" stroke="#ffffff">
-                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                    <g id="SVGRepo_iconCarrier">
-                        <path
-                            d="M11.748 5.773S11.418 5 10.914 5c-.496 0-.754.229-.926.387S6.938 7.91 6.938 7.91s-.837.731-.773 2.106c.054 1.375.323 3.332 1.719 6.058 1.386 2.72 4.855 6.876 7.047 8.337 0 0 2.031 1.558 3.921 2.191.549.173 1.647.398 1.903.398.26 0 .719 0 1.246-.385.536-.389 3.543-2.807 3.543-2.807s.736-.665-.119-1.438c-.859-.773-3.467-2.492-4.025-2.944-.559-.459-1.355-.257-1.699.054-.343.313-.956.828-1.031.893-.112.086-.419.365-.763.226-.438-.173-2.234-1.148-3.899-3.426-1.655-2.276-1.837-3.02-2.084-3.824a.56.56 0 0 1 .225-.657c.248-.172 1.161-.933 1.161-.933s.591-.583.344-1.27-1.906-4.716-1.906-4.716z">
-                        </path>
-                    </g>
-                </svg>
-                <h2 id="copyPhone">(646) 883-5096</h2>
+        <div class="flex contact">
+            <svg style="" width="102" height="75" viewBox="0 0 204 150" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_544_2)">
+                    <path d="M87.4534 0L174.056 150H203.706L117.103 0H87.4534Z" fill="white" />
+                    <path d="M116.252 0L29.6492 150H0L86.6023 0H116.252Z" fill="white" />
+                    <path d="M101.852 54.9375L87.0269 80.6148L127.08 149.988H156.729L101.852 54.9375Z" fill="white" />
+                </g>
+                <defs>
+                    <clipPath id="clip0_544_2">
+                        <rect width="203.706" height="150" fill="white" />
+                    </clipPath>
+                </defs>
+            </svg>
+            <div style="margin: auto;">
+                <p id="copyEmail">contact[at]griffinadelmann.com</p>
+                <p id="copyPhone">(646) 883-5096</p>
             </div>
         </div>
-    </div>
-
-    <div class="logo">
-        <svg width="204" height="150" viewBox="0 0 204 150" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_544_2)">
-                <path d="M87.4534 0L174.056 150H203.706L117.103 0H87.4534Z" fill="white" />
-                <path d="M116.252 0L29.6492 150H0L86.6023 0H116.252Z" fill="white" />
-                <path d="M101.852 54.9375L87.0269 80.6148L127.08 149.988H156.729L101.852 54.9375Z" fill="white" />
-            </g>
-            <defs>
-                <clipPath id="clip0_544_2">
-                    <rect width="203.706" height="150" fill="white" />
-                </clipPath>
-            </defs>
-        </svg>
     </div>
 
     <script src="./app.js"></script>
