--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="nav-inner">
             <a href="#threats">THREATS</a>
             <a href="#our-service">OUR SERVICE</a>
-            <a href="#about-us">ABOUT US</a>
+            <a href="/about.html">ABOUT US</a>
             <a href="#contact">CONTACT</a>
         </div>
     </div>
