--- a/about.html
+++ b/about.html
@@ -12,7 +12,16 @@
 
 <body>
 
-    <div class="container">
+     <div class="nav-outer flex">
+        <div class="nav-inner">
+            <a href="./index.html">HOME</a>
+            <a href="./index.html#our-service">OUR SERVICE</a>
+            <a href="./about.html" style="border-bottom: solid thin white;">ABOUT US</a>
+            <a href="./index.html#contact">CONTACT</a>
+        </div>
+    </div>
+
+    <div class="container" style="padding-top: 120px; padding-bottom: 120px;">
         <div style="padding: 20px; margin: 20px;" class="about">
 
                 
