--- a/about.html
+++ b/about.html
@@ -43,36 +43,33 @@
 
             <p>To set the standard in personalized cybersecurity, where high-touch service, surgical precision, and nuanced applications of open-source intelligence protect what matters most.</p>
 
-            <h2 style="font-size:24pt;">What We Care About - Our Values</h2>
-
+            <h2 style="font-size:24pt;">What We Care About</h2>
+            <br>
             <p class="sub-heading"><strong>1. Trust & Discretion</strong></p>
 
             <p>We’re in the business of trust. We protect more than your data- we safeguard your reputation, your way of life, and your peace of mind.</p>
 
             <p>Every engagement with our clients begins and ends with confidentiality and uncompromising integrity. When you place your trust in us, we treat it like the most valuable asset we’ll handle.</p>
-
+            <br>
             <p class="sub-heading"><strong>2. Thoroughness & Surgical Precision</strong></p>
 
             <p>We are not SaaS subscription providers or surface-level data broker removers, we draw forensic level connections.</p>
 
             <p>We perform every task, from mobile device hardening to social media visibility setting with surgical precision and clear intent. No loose ends.</p>
-
+            <br>
             <p class="sub-heading"><strong>3. Personalized & Proactive Security</strong></p>
 
             <p>There is no one-size-fits all in cybersecurity, and there never will be. We integrate everything you need and nothing you don’t.</p>
 
             <p>By understanding the nuances of your lifestyle, relationships, career, and ambitions, we design protection around you, anticipating vulnerabilities specific to your world.</p>
-
+            <br>
             <p class="sub-heading"><strong>4. Data Sovereignty & Literacy</strong></p>
 
             <p>We believe in having true ownership and control over your information- that’s knowing where it lives, who can access it, and how it can be used. To help our clients navigate their lives with discernment, we give them control that lasts.</p>
-
+            <br>
             <p class="sub-heading"><strong>5. Adaptability & Seamlessness</strong></p>
 
             <p>Technology and information are always changing. We are committed to continuous learning and adaptive innovation, allowing us to anticipate future risks and apply cutting-edge knowledge for our clients’ forward-looking protection.</p>
-
-            <h2 style="font-size:24pt;">Our Motivation</h2>
-
         </div>
     </div>
 </body>
