--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 
             <h1 style="font-weight: 300; font-size: 36px;">Who We Are</h1>
 
-            <p class="sub-heading"><strong>About Adelmann Us</strong></p>
+            <p class="sub-heading"><strong>About Us</strong></p>
 
             <p>We are a digital protection firm specializing in personalized, intelligence-grade security for high-net-worth individuals and families.  </p>
 
