--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container hero">
         <div id="hero">
             <h1 class="title">Adelmann Cybersecurity</h1>
-            <i class="subtitle" style="line-height: auto;">Human solutions to digital threats</i>
+            <i class="subtitle" style="line-height: auto;">Bespoke digital protection for discerning families and individuals.</i>
         </div>
     </div>
 
