--- a/about.html
+++ b/about.html
@@ -15,17 +15,18 @@
      <div class="nav-outer flex">
         <div class="nav-inner">
             <a href="./index.html">HOME</a>
-            <a href="./index.html#our-service">OUR SERVICE</a>
-            <a href="./about.html" style="border-bottom: solid thin white;">ABOUT US</a>
-            <a href="./index.html#contact">CONTACT</a>
+            <a href="./threats.html">THREATS</a>
+            <a href="./service.html">SERVICE</a>
+            <a href="./about.html" style="border-bottom: solid thin white;">ABOUT</a>
+            <a href="./contact.html">CONTACT</a>
         </div>
     </div>
 
-    <div class="container" style="padding-top: 120px; padding-bottom: 120px;">
+    <div class="container top">
         <div style="padding: 20px; margin: 20px;" class="about">
 
                 
-            <h1 style="font-weight: 300; font-size: 36px;">Who We Are</h1>
+            <h1 class="title">Who We Are</h1>
 
             <p class="sub-heading"><strong>About Us</strong></p>
 
