--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
     <div class="nav-outer flex">
         <div class="nav-inner">
-            <a href="#threats">THREATS</a>
-            <a href="#our-service">OUR SERVICE</a>
-            <a href="./about.html">ABOUT US</a>
-            <a href="#contact">CONTACT</a>
+            <a href="#" style="border-bottom: solid thin white;">HOME</a>
+            <a href="./threats.html">THREATS</a>
+            <a href="./service.html">SERVICE</a>
+            <a href="./about.html">ABOUT</a>
+            <a href="./contact.html">CONTACT</a>
         </div>
     </div>
     <div class="container hero">
@@ -28,8 +29,7 @@
             <i class="subtitle" style="line-height: auto;">Bespoke digital protection for discerning families and individuals.</i>
         </div>
     </div>
-
-    <div class="container" id="threats">
+ <div class="container" id="threats">
         <div class="inner">
             <h2 style="padding-left: 20px;">Digital Exposure is Your Greatest Liability</h2>
             <p style="padding: 20px; font-size: 16px;">Your personal and professional details exist online. Data
@@ -69,53 +69,6 @@
         </div>
     </div>
 
-    <div class="container" style="padding: 20px; margin-top: 100px; margin-bottom: 100px;" id="contact">
-        <!-- Assume this container provides centering/padding -->
-        <form action="https://send.pageclip.co/KnwGzQwGBnTpx9BbJ77yQxOVAlcsme42"
-            class="pageclip-form contact-form-styled" method="post">
-            <h2 style="text-align: center; padding-bottom: 20px; font-weight: normal; text-transform: uppercase;">
-                Contact Us</h2>
-            <div class="form-group">
-                <label for="name">Full Name <span class="required-asterisk">*</span></label>
-                <input type="text" id="name" name="name" placeholder="Enter your full name" required />
-            </div>
-
-            <div class="form-group">
-                <label for="occupation">Occupation <span class="required-asterisk">*</span></label>
-                <input type="text" id="occupation" name="occupation" placeholder="Enter your occupation" required />
-            </div>
-
-            <div class="form-group">
-                <label for="email">Email Address <span class="required-asterisk">*</span></label>
-                <input type="email" id="email" name="email" placeholder="youremail@website.com" required />
-            </div>
-
-            <div class="form-group">
-                <label for="phone">Phone Number <span class="required-asterisk">*</span></label>
-                <input type="tel" id="phone" name="phone" placeholder="+1 646-924-8365" required />
-            </div>
-
-            <div class="form-group">
-                <label for="request">Let us know how we can help you</label>
-                <input type="text" id="request" name="request" placeholder="..." />
-            </div>
-
-            <div class="form-group">
-                <label for="source">How did you hear about us</label>
-                <input type="text" id="source" name="source" placeholder="Referral, Online Search" />
-            </div>
-
-            <div class="form-group">
-                <button type="submit" class="pageclip-form__submit contact-form__submit-styled">
-                    <span>Submit</span>
-                </button>
-            </div>
-            <p style="font-size: 16px; text-align: center; opacity: 0.7;">+1 (646) 883-5096</p>
-
-
-        </form>
-    </div>
-    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 
 </html>
