--- a/service.html
+++ b/service.html
@@ -20,3 +20,9 @@
             <a href="./contact.html">CONTACT</a>
         </div>
     </div>
+    <div class="container top">
+        Website Under Construction...
+    </div>
+</body>
+
+</html>
