--- a/threats.html
+++ b/threats.html
@@ -11,12 +11,36 @@
 </head>
 
 <body>
+
     <div class="nav-outer flex">
         <div class="nav-inner">
             <a href="./index.html">HOME</a>
             <a href="#" style="border-bottom: solid thin white;">THREATS</a>
-            <a href="./service.html" >SERVICE</a>
+            <a href="./service.html">SERVICE</a>
             <a href="./about.html">ABOUT</a>
             <a href="./contact.html">CONTACT</a>
         </div>
     </div>
+
+    <div class="container top">
+        <div style="padding: 20px; margin: 20px;" class="about">
+
+
+            <h1 class="title">Threats We Address</h1>
+
+            <p class="sub-heading"><strong>Perimeter Blindness</strong></p>
+
+            <p>You may protect your home, your inbox, and your portfolio, but your exposure rarely originates there. It
+                comes from the periphery: a spouse’s Instagram, a kid’s sports game publication, or a staff member using
+                the wrong email address.</p>
+
+            <p class="sub-heading"><strong>The Professional Visibility Trap </strong></p>
+
+            <p>You don’t need to be famous to be exposed. In fact, some of the most vulnerable clients aren’t household
+                names, but rather trusted voices in their respective industries or professions.</p>
+
+        </div>
+    </div>
+</body>
+
+</html>
