--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="blob"></div>
-    <img src="./LooperGroup.svg" class="bgart"></img>
+    <img src="./bgimage.webp" class="bgart"></img>
 
     <div class="nav-outer flex">
         <div class="nav-inner">
@@ -23,52 +23,76 @@
             <a href="./contact.html">CONTACT</a>
         </div>
     </div>
+    <svg class="scroll-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M6 8L12 14L18 8" stroke="currentColor" stroke-width="2" stroke-linecap="butt"
+            stroke-linejoin="miter" />
+    </svg>
+
     <div class="container hero">
         <div id="hero">
             <h1 class="title">Adelmann Cybersecurity</h1>
-            <i class="subtitle" style="line-height: auto;">Bespoke digital protection for discerning families and individuals.</i>
+            <h2 class="subtitle" style="line-height: auto; margin: auto; text-align: center; font-style: italic;">
+                Bespoke digital protection
+            </h2>
+            <a href="./contact.html" class="cta-button">Schedule A Private Consultation</a>
+            <div class="container">
+                <div class="inner">
+                    <br>
+                    <br>
+                    <br>
+                    <p
+                        style="margin: auto; border: solid thin #ffffff2f; padding: 20px; background: #00000025; backdrop-filter: blur(20px);">
+                        We
+                        provide personalized,
+                        intelligence-grade
+                        security to families and
+                        individuals
+                        who value true sovereignty over their legacy and data.</p>
+                </div>
+            </div>
         </div>
     </div>
- <div class="container" id="threats">
-        <div class="inner">
-            <h2 style="padding-left: 20px;">Digital Exposure is Your Greatest Liability</h2>
-            <p style="padding: 20px; font-size: 16px;">Your personal and professional details exist online. Data
-                brokers, public records,
-                social media, and news
-                archives create a detailed, exploitable profile. For individuals with significant assets or public
-                profiles,
-                this information is the attack surface. Standard security tools do not address intelligence-driven
-                threats
-                derived from this public data. Your exposure is a liability.</p>
+    <div class="container m20" id="threats">
+        <div style="margin: auto; border: solid thin #ffffff2f;  background: #00000025; backdrop-filter: blur(20px);">
+            <h2 style="padding-left: 20px; padding-top: 20px;">What's In A Detail?</h2><br>
+            <p style="padding: 20px; font-size: 16px;">A birthdate here. A family photo there. A board affiliation, an
+                old username, a child’s school.
+                <br>
+                <br>
+                Individually, each data point might appear trivial or benign. However, danger hides in their
+                aggregation.
+                <br>
+                <br>
+                Sophisticated adversaries don’t look at data in isolation. They work with what’s already visible,
+                cross-referencing these seemingly disparate data points. When combined, they create a detailed, dynamic
+                portrait of your lifestyle, financial standing, relationships and behavioural patterns.
+                <br>
+                <br>
+                This correlation effect makes seemingly benign information dangerous because it builds a contextual
+                narrative about individuals and their family- one that can be inferred and weaponized by anyone with
+                intent.
+                <br>
+                <br>
+                It’s about what can be inferred and predicted by anyone with intent.
+                <br>
+                <br>
+                These narratives don’t require breaches or malware. They begin with what’s already visible. When mapped
+                correctly, a digital footprint becomes a manual for fraud, coercion, and surveillance.
+                <br>
+                <br>
+                For our clients, what’s in a detail is the margin between safety and exposure.
+            </p>
         </div>
     </div>
-
-    <div class="container" id="our-service" style="margin-top: 100px;">
-        <div class="inner">
-            <h2 style="padding-left: 20px;">Bespoke Digital Protection</h2>
-            <p style="padding: 20px; font-size: 16px;">Adelmann Cybersecurity conducts exhaustive Open Source
-                Intelligence (OSINT) audits to map your exact digital
-                footprint. We then execute precise data removal and alteration strategies based on your defined
-                objectives.
-                We harden critical systems and provide actionable intelligence training. Our service is tailored, manual
-                where necessary, and focused solely on reducing your specific vulnerabilities through expert OSINT
-                defense
-                and data control.</p>
-        </div>
-    </div>
-
-    <div class="container" id="about-us" style="margin-top: 100px;">
-        <div class="inner">
-            <h2 style="padding-left: 20px;">Your Partner in Data Sovereignty</h2>
-            <p style="padding: 20px; font-size: 16px;">Adelmann Cybersecurity specializes in digital footprint reduction
-                and OSINT countermeasures for high-profile
-                individuals and families. Our expertise lies in uncovering and neutralizing intelligence-based threats
-                derived from public data. We operate with absolute confidentiality and provide direct access to
-                specialists.
-                We deliver control, not dependency.</p>
-        </div>
-    </div>
-
+    <a href="./contact.html" class="cta-button">Schedule A Private Consultation</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <script src="./script.js"></script>
 </body>
 
 </html>
