--- a/index.html
+++ b/index.html
@@ -55,32 +55,25 @@
     <div class="container m20" id="threats">
         <div style="margin: auto; border: solid thin #ffffff2f;  background: #00000025; backdrop-filter: blur(20px);">
             <h2 style="padding-left: 20px; padding-top: 20px;">What's In A Detail?</h2><br>
-            <p style="padding: 20px; font-size: 16px;">A birthdate here. A family photo there. A board affiliation, an
-                old username, a child’s school.
-                <br>
-                <br>
-                Individually, each data point might appear trivial or benign. However, danger hides in their
-                aggregation.
-                <br>
-                <br>
-                Sophisticated adversaries don’t look at data in isolation. They work with what’s already visible,
-                cross-referencing these seemingly disparate data points. When combined, they create a detailed, dynamic
-                portrait of your lifestyle, financial standing, relationships and behavioural patterns.
-                <br>
-                <br>
-                This correlation effect makes seemingly benign information dangerous because it builds a contextual
-                narrative about individuals and their family- one that can be inferred and weaponized by anyone with
-                intent.
-                <br>
-                <br>
-                It’s about what can be inferred and predicted by anyone with intent.
-                <br>
-                <br>
-                These narratives don’t require breaches or malware. They begin with what’s already visible. When mapped
-                correctly, a digital footprint becomes a manual for fraud, coercion, and surveillance.
-                <br>
-                <br>
-                For our clients, what’s in a detail is the margin between safety and exposure.
+            <p style="padding: 20px; font-size: 16px;">High-net-worth families are easily one of the most underprotected
+                yet highly exposed groups in the digital age. They often live in a hybrid public-private world. Their
+                financial power can create a false sense of protection. With legal structures, wealth managers, and
+                estate planning professionals in place, families often believe their exposure has been “handled”.
+                However, wealth doesn’t necessarily shield them from digital threats. In fact, it makes them more
+                interesting to the wrong eyes. High-net-worth families can no longer rely on traditional privacy
+                assumptions. Their digital presence is extensive, nuanced, and vulnerable in ways that they do not fully
+                monitor or control.
+                <br><br>
+                Individually, each piece of publicly accessible information may appear trivial or harmless. A property
+                record here, a social media post there, or a simple corporate filing may seem not to expose much on its
+                own. However, danger hides in the aggregation. Adversaries use sophisticated methods to cross-reference
+                and connect these disparate data points. When combined, they create a detailed, dynamic portrait of
+                lifestyle, financial standing, relationships and behavioural patterns. This correlation effect makes
+                seemingly benign information dangerous because it builds a contextual narrative about individuals and
+                their family. It’s about what can be inferred and predicted by anyone with intent.
+                <br><br>
+                So, what’s in a detail? For our clients, the margin between safe and exposed.
+
             </p>
         </div>
     </div>
